--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<h2><a href="https://github.com/bl-engineer/GifSource">Get GIFFY with it</a></h2>
 									<p>Feature that allows you to search,save and share your Favotite Gif's</p>
 								</header>
-								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="/images/screenshot.png" alt="screenshot of GifSource project" /></a>
+								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="/images/pic01.jpg" alt="screenshot of GifSource project" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">View Project</a></li>
 								</ul>
