--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html"><img src="/images/app.jpg" alt="screenshot of GifSource project" />Projects</a></li>
+							<li class="active"><a href="index.html">Projects</a></li>
 							
 						</ul>
 						<ul class="icons">
