--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Featured Post -->
+					<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									
+									<span class="date">April 25, 2017</span>
 									<h2><a href="https://github.com/bl-engineer/GifSource">Get GIFFY with it</a></h2>
 									<p>Feature that allows you to search,save and share your Favotite Gif's</p>
 								</header>
@@ -60,6 +60,33 @@
 									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">View Project</a></li>
 								</ul>
 							</article>
+
+					<!-- Posts -->
+						<section class="posts">
+							<article>
+								<header class="major">
+									<span class="date">July 28, 2022</span>
+									<h2><a href="https://github.com/bl-engineer/GifSource">Future Project</a></h2>
+									<p>Discription will be given soon with more details</p>
+								</header>
+								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="/images/pic02.jpg" alt="screenshot of GifSource project" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">Coming soon</a></li>
+								</ul>
+							</article>
+
+							<article class="post featured">
+								<header class="major">
+									<span class="date">August 27, 2022</span>
+									<h2><a href="https://github.com/bl-engineer/GifSource">Project 3</a></h2>
+									<p>Coming in four weeks time</p>
+								</header>
+								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="/images/pic03.jpg" alt="screenshot of GifSource project" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">Future Project</a></li>
+								</ul>
+							</article>
+						</section>
 
 						<section class="split contact">
 							<section class="alt">
