--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
 					<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
+									<span class="date">May 25, 2022</span>
 									<h2><a href="https://github.com/bl-engineer/GifSource">Get GIFFY with it</a></h2>
-									<p>Feature that allows you to search,save and share your Favotite Gif's</p>
+									<p id="color-highlight">Feature that allows you to search,save and share your Favotite Gif's</p>
 								</header>
-								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="/images/app.jpg" alt="screenshot of GifSource project" /></a>
+								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="https://media1.giphy.com/media/3o6vXTpomeZEyxufGU/giphy.gif" alt="screenshot of GifSource project" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">View Project</a></li>
 								</ul>
@@ -67,9 +67,9 @@
 								<header class="major">
 									<span class="date">July 28, 2022</span>
 									<h2><a href="https://github.com/bl-engineer/GifSource">Future Project</a></h2>
-									<p>Discription will be given soon with more details</p>
+									<p>Discriptions will be given soon with more details</p>
 								</header>
-								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="/images/pic02.jpg" alt="screenshot of GifSource project" /></a>
+								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="https://cdn5.vectorstock.com/i/1000x1000/31/49/blue-internet-background-vector-13753149.jpg" alt="screenshot of GifSource project" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">Coming soon</a></li>
 								</ul>
@@ -81,7 +81,7 @@
 									<h2><a href="https://github.com/bl-engineer/GifSource">Project 3</a></h2>
 									<p>Coming in four weeks time</p>
 								</header>
-								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="/images/pic03.jpg" alt="screenshot of GifSource project" /></a>
+								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="https://media.istockphoto.com/vectors/programming-web-banner-vector-id1169873646?k=20&m=1169873646&s=612x612&w=0&h=OalFFwYJq4U4KGYOQtWizguFfE2NE_XYoNHOpMAhJbM=" alt="screenshot of GifSource project" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">Future Project</a></li>
 								</ul>
