--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">May 25, 2022</span>
-									<h2><a href="https://github.com/bl-engineer/GifSource">Get GIFFY with it</a></h2>
+									<h2><a href="https://bl-engineer.github.io/GifSource/">Get GIFFY with it</a></h2>
 									<p id="color-highlight">Feature that allows you to search,save and share your Favotite Gif's</p>
 								</header>
-								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="https://media1.giphy.com/media/3o6vXTpomeZEyxufGU/giphy.gif" alt="screenshot of GifSource project" /></a>
+								<a href="https://bl-engineer.github.io/GifSource/" class="image main"><img src="https://media1.giphy.com/media/3o6vXTpomeZEyxufGU/giphy.gif" alt="screenshot of GifSource project" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">View Project</a></li>
 								</ul>
