Adding project2 and its links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 					<div id="intro">
 						<h1>Bocar The Web Developer Portfolio<br/>
 						</h1>
-						<p>Web Developer well versed in html,Css/boostrap, Git technology and well skilled in JavaScript, Web APIs including Third-Party APIs and Server-Side APIs.<a href="https://github.com/bl-engineer"></p>@BocarTheWebDeveloper</a></p>
+						<p>Web Developer well versed in html,Css/boostrap, Git technology and well skilled in JavaScript,
+							 Web APIs including Third-Party APIs, Server-Side APIs, Node.js, OOP ,Express.js, SQL, ORM, Chart.js, MVC and Heroku deployment.<a href="https://github.com/bl-engineer"></p>@BocarTheWebDeveloper</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -57,35 +58,56 @@
 								</header>
 								<a href="https://bl-engineer.github.io/GifSource/" class="image main"><img src="https://i.postimg.cc/mDcgBJY9/sample.png" alt="screenshot of GifSource project" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">View Project</a></li>
+									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">View Project 1</a></li>
 								</ul>
+                                <ul class="actions special">
+									<li><a href="https://bl-engineer.github.io/GifSource/" class="button large"><p id="color-highlight">Try the cool app..from Project 1</p></a></li>
+								</ul>
+
+
 							</article>
 
 					<!-- Posts -->
-						<section class="posts">
-							<article>
+						
+							<article class="post featured">
 								<header class="major">
-									<span class="date">July 28, 2022</span>
-									<h2><a href="https://github.com/bl-engineer/GifSource">Future Project</a></h2>
-									<p>Discriptions will be given soon with more details</p>
+									<span class="date">August 20, 2022</span>
+									<h2><a href="https://poll-together.herokuapp.com">Your vote count, make your poll today</a></h2>
+									<p id="color-highlight">An elegant application for users to create, share, and view the result of polls. Their experience will be responsive, intuitive and visually appealing</p>
 								</header>
-								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="https://cdn5.vectorstock.com/i/1000x1000/31/49/blue-internet-background-vector-13753149.jpg" alt="screenshot of GifSource project" /></a>
+								<a href="https://poll-together.herokuapp.com" class="image main"><img src="https://https://postimg.cc/CnHYj9Wc/sample.png" alt="screenshot of PollTogether project" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">Coming soon</a></li>
+									<li><a href="https://github.com/bl-engineer/PollTogether" class="button large">View project 2</a></li>
+								</ul>
+								<ul class="actions special">
+									<li><a href="https://poll-together.herokuapp.com" class="button large"><p id="color-highlight">vote..Now</p></a></li>
+								</ul>
+
+							</article>
+						<section class="posts">
+							<article class="post featured">
+								<header class="major">
+									<span class="date">September 20, 2022</span>
+									<h2><a href="https://github.com/bl-engineer">Project 3</a></h2>
+									<p>Descriptions will be given soon with more details</p>
+								</header>
+								<a href="https://github.com/bl-engineer" class="image main"><img src="https://media.istockphoto.com/vectors/programming-web-banner-vector-id1169873646?k=20&m=1169873646&s=612x612&w=0&h=OalFFwYJq4U4KGYOQtWizguFfE2NE_XYoNHOpMAhJbM=" alt="screenshot of PollTogether" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/bl-engineer" class="button large">Coming soon..</a></li>
+								</ul>
+							</article>
+                            <article class="post featured">
+								<header class="major">
+									<span class="date">September 20, 2022</span>
+									<h2><a href="https://github.com/bl-engineer">Future project</a></h2>
+									<p>Coming in few weeks time</p>
+								</header>
+								<a href="https://github.com/bl-engineer" class="image main"><img src="https://media.istockphoto.com/vectors/programming-web-banner-vector-id1169873646?k=20&m=1169873646&s=612x612&w=0&h=OalFFwYJq4U4KGYOQtWizguFfE2NE_XYoNHOpMAhJbM=" alt="screenshot of PollTogether" /></a>
+								<ul class="actions special">
+									<li><a href="https://github.com/bl-engineer" class="button large">Future Project.. Stay tunned</a></li>
 								</ul>
 							</article>
 
-							<article class="post featured">
-								<header class="major">
-									<span class="date">August 27, 2022</span>
-									<h2><a href="https://github.com/bl-engineer/GifSource">Project 3</a></h2>
-									<p>Coming in four weeks time</p>
-								</header>
-								<a href="https://github.com/bl-engineer/GifSource" class="image main"><img src="https://media.istockphoto.com/vectors/programming-web-banner-vector-id1169873646?k=20&m=1169873646&s=612x612&w=0&h=OalFFwYJq4U4KGYOQtWizguFfE2NE_XYoNHOpMAhJbM=" alt="screenshot of GifSource project" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/bl-engineer/GifSource" class="button large">Future Project</a></li>
-								</ul>
-							</article>
 						</section>
 
 						<section class="split contact">
