convert backg pic/png

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 									<h2><a href="https://poll-together.herokuapp.com">Your vote count, make your poll today</a></h2>
 									<p id="color-highlight">An elegant application for users to create, share, and view the result of polls. Their experience will be responsive, intuitive and visually appealing</p>
 								</header>
-								<a href="https://poll-together.herokuapp.com" class="image main"><img src="https://postimg.cc/CnHYj9Wc/sample.png" alt="screenshot of PollTogether project" /></a>
+								<a href="https://poll-together.herokuapp.com" class="image main"><img src="https://i.postimg.cc/SsmFJNDf/Screen-Shot-2022-08-20-at-5-50-27-PM.png" alt="screenshot of PollTogether project" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/bl-engineer/PollTogether" class="button large">View project 2</a></li>
 								</ul>
