update of backg pic on project4

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 									<h2><a href="https://github.com/bl-engineer">Future project</a></h2>
 									<p>Coming in few weeks time</p>
 								</header>
-								<a href="https://github.com/bl-engineer" class="image main"><img src="https://media.istockphoto.com/vectors/programming-web-banner-vector-id1169873646?k=20&m=1169873646&s=612x612&w=0&h=OalFFwYJq4U4KGYOQtWizguFfE2NE_XYoNHOpMAhJbM=" alt="screenshot of PollTogether" /></a>
+								<a href="https://github.com/bl-engineer" class="image main"><img src="https://i.postimg.cc/ryrV3z7K/Screen-Shot-2022-08-20-at-6-43-54-PM.png" alt="screenshot of PollTogether" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/bl-engineer" class="button large">Future Project.. Stay tunned</a></li>
 								</ul>
