--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Bocar The Web Developer Portfolio<br/>
 						</h1>
-						<p>Web Developer well versed in html,Css/boostrap, Git technology and well skilled in JavaScript,
+						<p style="color:aquamarine;">Web Developer well versed in html,Css/boostrap, Git technology and well skilled in JavaScript,
 							 Web APIs including Third-Party APIs, Server-Side APIs, Node.js, OOP ,Express.js, SQL, ORM, Chart.js, MVC and Heroku deployment.<a href="https://github.com/bl-engineer"></p>@BocarTheWebDeveloper</a></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -30,15 +30,14 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Bocar The Web Developer</a>
+						<a href="index.html" class="logo" >Bocar The Web Developer</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">About Me</a></li>
-							<li><a href="index.html">Resume</a></li>
-							<li class="active"><a href="index.html">Work</a></li>
+							<li><a href="index.html" style="color:aquamarine;">About Me</a></li>
+							<li class="active"><a href="#main">Work</a></li>
 							
 						</ul>
 					
@@ -124,11 +123,11 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">(470) 895-2907</a></p>
+								<p>(470) 895-2907</p>
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">bocfri@yahoo.fr</a></p>
+								<p><a href="https://www.yahoo.com">bocfri@yahoo.fr</a></p>
 							</section>
 							<section>
 								<h3 id="sm-color">Social Media</h3>
