--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+        
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
 
 				<!-- Intro -->
+				    
 					<div id="intro">
-						<h1>Bocar The Web Developer Portfolio<br/>
-						</h1>
+						<h1>Bocar The Web Developer Portfolio<br/></h1>
+						<img src="https://i.postimg.cc/T3n9VMZK/IMG-3630.jpg" alt="Bocar's photo" /></br>
 						<p style="color:aquamarine;">Web Developer well versed in html,Css/boostrap, Git technology and well skilled in JavaScript,
 							 Web APIs including Third-Party APIs, Server-Side APIs, Node.js, OOP ,Express.js, SQL, ORM, Chart.js, MVC and Heroku deployment.<a href="https://github.com/bl-engineer"></p>@BocarTheWebDeveloper</a></p>
 						<ul class="actions">
