--- a/index.html
+++ b/index.html
@@ -91,21 +91,26 @@
 								</ul>
 
 							</article>
-						<section class="posts">
+					
 							<article class="post featured">
 								<header class="major">
-									<span class="date">September 20, 2022</span>
-									<h2><a href="https://github.com/bl-engineer">Project 3</a></h2>
-									<p>Descriptions will be given soon with more details</p>
+									<span class="date">October 19, 2022</span>
+									<h2><a href="https://github.com/bl-engineer">AfriConnect, connects the african leaders of tomorrow</a></h2>
+									<p id="color-highlight">A Social Network MERN App that will connect the African youth in the nearest future</p>
 								</header>
-								<a href="https://github.com/bl-engineer" class="image main"><img src="https://media.istockphoto.com/vectors/programming-web-banner-vector-id1169873646?k=20&m=1169873646&s=612x612&w=0&h=OalFFwYJq4U4KGYOQtWizguFfE2NE_XYoNHOpMAhJbM=" alt="screenshot of PollTogether" /></a>
+								<a href="https://github.com/bl-engineer" class="image main"><img src="https://i.postimg.cc/JnGDXmSY/Screen-Shot-2022-10-19-at-10-40-03-PM.png" alt="screenshot of AfriConnect" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/bl-engineer" class="button large">Coming soon..</a></li>
+									<li><a href="https://github.com/bl-engineer/AfriConnect" class="button large">View project 3</a></li>
+								</ul>
+								</ul>
+								<ul class="actions special">
+									<li><a href="https://poll-together.herokuapp.com" class="button large"><p id="color-highlight">Connect..Now</p></a></li>
 								</ul>
 							</article>
+
                             <article class="post featured">
 								<header class="major">
-									<span class="date">September 20, 2022</span>
+									<span class="date">December 20, 2022</span>
 									<h2><a href="https://github.com/bl-engineer">Future project</a></h2>
 									<p>Coming in few weeks time</p>
 								</header>
@@ -115,7 +120,7 @@
 								</ul>
 							</article>
 
-						</section>
+						
 
 						<section class="split contact" id="split contact">
 							<section class="alt">
